...
    <!-- Main Content Section with Weight -->
    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/organizer_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/organization"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/event_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...
                android:textSize="@dimen/text_size_secondary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/edit_event_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/event_name_text_view"
...

            <TextView
                android:id="@+id/event_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <Button
                android:id="@+id/edit_event_details"
                android:layout_width="48dp"
                android:layout_height="48dp"
...

            <TextView
                android:id="@+id/event_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <Button
                android:id="@+id/edit_event_date"
                android:layout_width="48dp"
                android:layout_height="48dp"
...

            <TextView
                android:id="@+id/lottery_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <Button
                android:id="@+id/edit_lottery_date"
                android:layout_width="48dp"
                android:layout_height="48dp"
...

            <Button
                android:id="@+id/do_lottery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                app:layout_constraintTop_toTopOf="parent"/>
            <ImageView
                android:id="@+id/qr_code"
                android:src="@mipmap/qrcode_foreground"
                android:layout_width="match_parent"
...

            <Button
                android:id="@+id/share_qr_code"
                android:layout_width="48dp"
                android:layout_height="48dp"
...

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_waitlist"
                        style="@style/Widget.Material3.Chip.Filter"
                        android:layout_width="wrap_content"
...

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_chosen"
                        style="@style/Widget.Material3.Chip.Filter"
                        android:layout_width="wrap_content"
...

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_cancelled"
                        style="@style/Widget.Material3.Chip.Filter"
                        android:layout_width="wrap_content"
...

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_registered"
                        style="@style/Widget.Material3.Chip.Filter"
                        android:layout_width="wrap_content"
...

            <ListView
                android:id="@+id/entrants_list_view"
                android:layout_width="match_parent"
                android:layout_height="150dp"
...

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/message_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
